# boc-mcp

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
config/: config.example.yaml
deploy/k8s/: 00-namespace.yaml  01-config.yaml  02-deployment.yaml  03-ingress.yaml  04-production.yaml  README.md  kustomization.yaml
docs/: _bundle_infra.md  _full_pdf_text.txt  _raw_apis.json  api-inventory.md  api-reference.md  apis_with_params.json  test-cases.md  usage-guide.md
docs/superpowers/plans/: 2026-07-10-boc-mcp-implementation.md
docs/superpowers/specs/: 2026-07-08-boc-mcp-design.md
scripts/: _categorize.py  _extract_params.py  _extract_pdf.py  _finalize_spec.py  _fix_method.py  _generator.py  _inspect.py  _inspect2.py  _inspect3.py  _inspect4.py  _inspect5.py  _inspect6.py  _inspect7.py  _parse2.py  _parse_apis.py  _regen_inventory.py  _update_spec.py  dev_server.py
src/boc_mcp/: __main__.py  config.py  health.py  logging_setup.py  middleware.py  server.py
src/boc_mcp/auth/: models.py  token_manager.py
src/boc_mcp/client/: __init__.py  boc_client.py  errors.py  pagination.py
src/boc_mcp/models/: common.py
src/boc_mcp/services/: base.py
src/boc_mcp/services/application/: __init__.py  models.py  service.py  (+1 more)
tests/e2e/: test_server_live.py
tests/unit/: test_all_tools.py  test_config.py  test_health.py  test_logging.py  test_middleware.py  test_server.py
tests/unit/auth/: test_token_manager.py
tests/unit/client/: test_boc_client.py  test_errors.py  test_pagination.py
tests/unit/models/: test_common.py
(+53 files in other folders)
