[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "boc-mcp"
version = "0.1.0"
description = "MCP Server for BoCloud BeyondContainer platform"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.0.0",
    "aiohttp>=3.10.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "pyyaml>=6.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.7",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "aioresponses>=0.7.6",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/boc_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: marks integration tests against real platform",
    "e2e: marks end-to-end MCP tests",
]
addopts = "-m 'not integration and not e2e' --cov=boc_mcp --cov-report=term-missing"

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
packages = ["boc_mcp"]
